# unreal-vr

./: .gitignore  .gitmodules  CLionGoldenRules.xml  CMakeLists.txt  Cargo.toml  LICENSE  README.md  UnrealVR.sln  UnrealVR.sln.DotSettings  rizin_to_uml.py  rustfmt.toml  service_structure.mmd
.github/: FUNDING.yml
.github/workflows/: Build.yml
PatternStreams/: CMakeLists.txt
PatternStreams/include/: PatternStreams.h
PatternStreams/src/: PatternStreams.cpp  PatternStreamsPrivate.cpp  PatternStreamsPrivate.h
UnrealReflector/: CMakeLists.txt
UnrealReflector/include/: ACacheable.h  UnrealCore.h  UnrealCoreUObject.h  UnrealMath.h  UnrealReflection.h  UnrealReflector.h
UnrealReflector/include/Unreal/: Core.h  CoreUObject.h  Math.h
UnrealReflector/src/: ACacheable.cpp  UnrealCore.cpp  UnrealCoreUObject.cpp  UnrealMath.cpp  UnrealReflection.cpp  UnrealReflector.cpp
UnrealReflector/src/Unreal/: Core.cpp  CoreUObject.cpp  Math.cpp
UnrealVRCommon/: Logger.cpp  Logger.h  UnrealVRCommon.vcxproj  UnrealVRCommon.vcxproj.filters
UnrealVRLauncher/: AboutPage.xaml  AboutPage.xaml.cs  App.xaml  App.xaml.cs  GeneralPage.xaml  GeneralPage.xaml.cs  Launcher.cpp  Launcher.h  MainWindow.xaml  MainWindow.xaml.cs  Microsoft.WindowsAppSdk.manifest  Native.cs  NativeMethods.txt  Package.appxmanifest  PipeServer.cs  ProfileModel.cs  ProfilePage.xaml  ProfilePage.xaml.cs  UnrealVRLauncher.cpp  UnrealVRLauncher.csproj  UnrealVRLauncher.h  UnrealVRLauncher.vcxproj  UnrealVRLauncher.vcxproj.filters  app.manifest  main.cpp
UnrealVRLauncher/Properties/: launchSettings.json
UnrealVRLoader/: AEngineService.h  AGraphicsService.cpp  AGraphicsService.h  APipeService.h  AService.h  AXrService.h  CalculateProjectionMatrix.asm  D3D11LoaderManager.cpp  D3D11LoaderManager.h  D3D11Manager.cpp  D3D11Manager.h  D3D11Service.cpp  D3D11Service.h  Defs.h  DependencyInjection.cpp  DependencyInjection.h  ErrorHandling.h  HookHelper.cpp  HookHelper.h  HookManager.cpp  HookManager.h  IEngineService.h  IGraphicsService.h  IService.h  IXrService.h  Loader.cpp  Loader.h  Logger.cpp  Logger.h  Logging.cpp  Logging.h  LoggingService.cpp  LoggingService.h  Matrix.cpp  Matrix.h  OpenXRService.cpp  OpenXRService.h  OpenXrD3D11Service.h  OpenXrService.h  PatternStream.cpp  (+43 more)
UnrealVRLoader/old/: HookHelper.h  OpenXRService.cpp  OpenXRService.h  PixelShader.hlsl  UnrealVRLoader.cpp  UnrealVRLoader.h  dllmain.cpp  hex_to_cpp.py
UnrealVRMod/: Basic.cpp  CoreUObject_functions.cpp  D3D11Manager.cpp  D3D11Manager.h  D3D11ModManager.cpp  D3D11ModManager.h  Mod.cpp  Mod.h  Ue4.hpp  UnrealVRMod.cpp  UnrealVRMod.h  UnrealVRMod.vcxproj  UnrealVRMod.vcxproj.filters  VRManager.cpp  VRManager.h  dllmain.cpp
asm-analyzer/: Cargo.toml
asm-analyzer/src/: lib.rs  model.rs  tests.rs  tree.rs
docs/: CNAME  index.html  style.css
docs/writeup/: index.html
pattern-streams/: Cargo.toml
pattern-streams-macros/: Cargo.toml
pattern-streams-macros/src/: lib.rs
pattern-streams/src/: lib.rs  proc_info.rs  ps.rs
tools/: diff.py
unreal-camera-injector/: Cargo.toml
unreal-camera-injector/src/: lib.rs
unreal-sdk/: Cargo.toml
unreal-sdk-derive/: Cargo.toml
unreal-sdk-derive/src/: lib.rs
unreal-sdk/src/: csharp.rs  dotenv.rs  error.rs  install.rs  lib.rs  path.rs  source.rs  tests.rs  ue_api.rs  ue_sdk.rs  version.rs
unreal-sdk/src/csharp/: unreal_module_interface.rs
unreal-sdk/src/csharp/unreal_module_interface/: UnrealModuleInterface.template.cs  UnrealModuleInterface.template.csproj  UnrealModuleInterface.template.sln
unreal-sdk/src/ue_api/: core.rs  core_u_object.rs
unreal-sdk/src/ue_api/core/: f_name.rs  f_name_entry_id.rs
unreal-vr-core/: Cargo.toml
unreal-vr-core/src/: lib.rs  services.rs
unreal-vr-core/src/services/: d3d.rs  d3d11.rs  d3d12.rs  open_xr.rs  pipe.rs  ue.rs
unreal-vr-launcher/: Cargo.toml
unreal-vr-runtime/: Cargo.toml  build.rs
unreal-vr-runtime/src/: ParseModule.cs  lib.rs  services.rs
unreal-vr-runtime/src/services/: d3d.rs  d3d11.rs  d3d12.rs  open_xr.rs  pipe.rs  ue.rs
