[package]
name = "pattern-streams-macros"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Pizarro <gpizarro@javaman.net>"]
description = "Macros for pattern-streams"
homepage = "https://unrealvr.dev"
repository = "https://github.com/TheNewJavaman/unreal-vr"
license = "MIT"
keywords = ["virtual-reality", "graphics", "gamedev", "unreal-engine", "vr"]
categories = ["game-development", "game-engines", "graphics"]

[lib]
proc-macro = true

[dependencies]
syn = "1.0.96"
quote = "1.0.18"