[package]
name = "pattern-streams"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Pizarro <gpizarro@javaman.net>"]
description = "Simplifies assembly instruction pattern matching in runtime memory"
homepage = "https://unrealvr.dev"
repository = "https://github.com/TheNewJavaman/unreal-vr"
license = "MIT"
keywords = ["virtual-reality", "graphics", "gamedev", "unreal-engine", "vr"]
categories = ["game-development", "game-engines", "graphics"]

[dependencies]
pattern-streams-macros = { path = "../pattern-streams-macros" }

[dependencies.windows]
version = "0.37.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus"
]