[package]
name = "unreal-camera-injector"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Pizarro <gpizarro@javaman.net>"]
description = "Manages custom camera views in Unreal Engine games"
homepage = "https://unrealvr.dev"
repository = "https://github.com/TheNewJavaman/unreal-vr"
license = "MIT"
keywords = ["virtual-reality", "graphics",  "gamedev", "unreal-engine", "vr"]
categories = ["game-development", "game-engines", "graphics"]

[dependencies]
unreal-sdk = { path = "../unreal-sdk" }