[package]
name = "unreal-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Pizarro <gpizarro@javaman.net>"]
description = "Finds and interacts with Unreal Engine objects in the currently running process"
homepage = "https://unrealvr.dev"
repository = "https://github.com/TheNewJavaman/unreal-vr"
license = "MIT"
keywords = ["virtual-reality", "graphics", "gamedev", "unreal-engine", "vr"]
categories = ["game-development", "game-engines", "graphics"]

[dependencies]
bindgen = "0.60"
windows = { version = "0.39", features = ["Win32_Foundation", "Win32_System_Registry"] }
serde_json = "1.0"
