[package]
name = "unreal-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Pizarro <gpizarro@javaman.net>"]
homepage = "https://unrealvr.dev"
repository = "https://github.com/TheNewJavaman/unreal-vr"
license = "MIT"

[dependencies]
bindgen = "0.60"
windows = { version = "0.39", features = ["Win32_Foundation", "Win32_System_Registry"] }
serde_json = "1"
regex = "1"
lazy_static = "1"
